--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的 GitHub Pages 个人网站</title>
+    <title>Siyi Lyu的 GitHub Pages 个人网站</title>
 </head>
 <body>
-    <h1>欢迎来到我的 GitHub 个人网站！</h1>
-    <p>这是我用 GitHub Pages 搭建的网站，正在学习 HTML！</p>
+    <h1>欢迎来到Siyi Lyu的 GitHub 个人网站！</h1>
+    <p>这是我的个人网站，展示我的项目和博客。</p>
+    <img src="mypic.jpg" alt="我的照片1" width="300">
 </body>
 </html>
