--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>欢迎来到Siyi Lyu的 GitHub 个人网站！</h1>
     <p>这是我的个人网站，展示我的项目和博客。</p>
-    <img src="1.jpg" alt="我的生活照" width="300">
+    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" alt="我的生活照" width="300">
 </body>
 </html>
