--- a/index.html
+++ b/index.html
@@ -6,8 +6,56 @@
     <title>Siyi Lyu的 GitHub Pages 个人网站</title>
 </head>
 <body>
-    <h1>欢迎来到Siyi Lyu的 GitHub 个人网站！</h1>
+    <h1>欢迎来到 Siyi Lyu 的 GitHub 个人网站！</h1>
     <p>这是我的个人网站，展示我的项目和博客。</p>
-    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" alt="我的生活照" width="300">
+
+    <!-- 个人照片 -->
+    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
+         alt="我的生活照" width="300">
+
+    <!-- 个人介绍（中文）-->
+    <h2>关于我</h2>
+    <p>我是牛津大学数学科学硕士，具有扎实的数学、统计学和数据科学背景，并获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）。即将于 2025 年秋季前往美国 TOP 30 院校读统计学博士学位。</p>
+
+    <p>平时生活中，我的爱好是 <strong>跳舞、游戏、运动、看书</strong>。</p>
+
+    <h2>学术兴趣</h2>
+    <p>我的学术兴趣是 <strong>高维数据分析、计算统计和机器学习</strong>，以及它们的应用。在学术研究中，我深入学习了 <strong>随机微分方程、贝叶斯方法、统计机器学习高级主题、随机矩阵理论、图模型和深度学习中的不确定性</strong> 等课程，并在数据分析与建模方向积累了丰富经验。</p>
+
+    <h2>数据分析经验</h2>
+    <p>我曾在 <strong>阿里巴巴、国投证券、开源证券</strong> 等公司担任数据分析实习生，熟练掌握 <strong>数据清洗、特征工程、A/B 测试设计及因果推断</strong> 等关键技术，具备从海量数据中提取关键业务洞察的能力。</p>
+
+    <p>我精通 <strong>Python（NumPy、Pandas、Scikit-learn、PyTorch）</strong> 和 <strong>R</strong>，并熟练使用 <strong>Excel、SQL</strong> 进行数据查询与处理。此外，我擅长 <strong>Tableau、Power BI</strong> 进行数据可视化，能够高效制作仪表盘和报告，为商业决策提供支持。</p>
+
+    <h2>未来方向</h2>
+    <p>希望未来能够加入 <strong>数据科学团队</strong>，结合我的 <strong>统计分析、商业分析和可视化能力</strong>，助力高维数据的深入分析，挖掘业务增长潜力，并推动数据驱动决策的高效落地。</p>
+
+    <!-- 联系方式 -->
+    <h2>联系我</h2>
+    <p>📧 <strong>邮箱：</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
+
+    <hr> <!-- 分割线 -->
+
+    <!-- 个人介绍（英文） -->
+    <h2>About Me</h2>
+    <p>I am a Master of Mathematical Sciences graduate from the University of Oxford with a solid background in mathematics, statistics, and data science. I was awarded the **Optiver Foundation Scholarship** (one of only six recipients worldwide and the only one from Asia). In the fall of 2025, I will begin my Ph.D. studies in Statistics at a **Top 30 U.S. university**.</p>
+
+    <p>In my free time, I enjoy <strong>dancing, gaming, sports, and reading</strong>.</p>
+
+    <h2>Academic Interests</h2>
+    <p>My academic interests include <strong>high-dimensional data analysis, computational statistics, and machine learning</strong>, as well as their applications. My studies have covered topics such as <strong>stochastic differential equations, Bayesian methods, advanced statistical machine learning, random matrix theory, graphical models, and uncertainty in deep learning</strong>. I have also gained substantial experience in data analysis and modeling.</p>
+
+    <h2>Data Analysis Experience</h2>
+    <p>I have worked as a data analysis intern at <strong>Alibaba, Guotou Securities, and Kaiyuan Securities</strong>, where I gained expertise in <strong>data cleaning, feature engineering, A/B test design, and causal inference</strong>. I have a strong ability to extract critical business insights from massive datasets.</p>
+
+    <p>I am proficient in <strong>Python (NumPy, Pandas, Scikit-learn, PyTorch)</strong> and <strong>R</strong>, and skilled in using <strong>Excel and SQL</strong> for data querying and processing. Additionally, I excel at data visualization with <strong>Tableau and Power BI</strong>, enabling me to create effective dashboards and reports that support business decisions.</p>
+
+    <h2>Future Aspirations</h2>
+    <p>I aspire to join a <strong>data science team</strong>, where I can leverage my skills in <strong>statistical analysis, business analytics, and data visualization</strong> to conduct high-dimensional data analysis, uncover business growth opportunities, and drive data-driven decision-making.</p>
+
+    <!-- Contact Information -->
+    <h2>Contact Me</h2>
+    <p>📧 <strong>Email:</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
+
 </body>
 </html>
