--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- 个人介绍（中文）-->
     <h2>关于我</h2>
-    <p>我是牛津大学数学科学硕士，具有扎实的数学、统计学和数据科学背景，并获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）。即将于 2025 年秋季前往美国 TOP 30 院校读统计学博士学位。</p>
+    <p>我叫吕思宜，目前在牛津大学攻读数学科学硕士，之前在雷丁大学和南京信息工程大学就读数学与应用数学双学士学位。我具有扎实的数学、统计学和数据科学背景，目前已获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）以及博士全额奖学金。即将于 2025 年秋季前往美国 TOP 30 院校读统计学博士学位。</p>
 
     <p>平时生活中，我的爱好是 <strong>跳舞、游戏、运动、看书</strong>。</p>
 
@@ -38,7 +38,7 @@
 
     <!-- 个人介绍（英文） -->
     <h2>About Me</h2>
-    <p>I am a Master of Mathematical Sciences graduate from the University of Oxford with a solid background in mathematics, statistics, and data science. I was awarded the **Optiver Foundation Scholarship** (one of only six recipients worldwide and the only one from Asia). In the fall of 2025, I will begin my Ph.D. studies in Statistics at a **Top 30 U.S. university**.</p>
+    <p>My name is Siyi Lyu (Harper). I am a Master of Mathematical Sciences graduate from the University of Oxford with a solid background in mathematics, statistics, and data science. I was awarded the **Optiver Foundation Scholarship** (one of only six recipients worldwide and the only one from Asia). In the fall of 2025, I will begin my Ph.D. studies in Statistics at a **Top 30 U.S. university**.</p>
 
     <p>In my free time, I enjoy <strong>dancing, gaming, sports, and reading</strong>.</p>
 
