--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Siyi Lyu的 GitHub Pages 个人网站</title>
 </head>
 <body>
-    <h1>欢迎来到 Siyi Lyu 的 GitHub 个人网站！</h1>
-    <p>这是我的个人网站，展示我的项目和博客。</p>
+    <h1>Welecome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
+    <p>这是我的个人网站，展示我的项目,成果和博客。</p>
 
     <!-- 个人照片 -->
     <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
