--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siyi Lyu的 GitHub Pages 个人网站</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welecome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
