--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>我精通 <strong>Python（NumPy、Pandas、Scikit-learn、PyTorch）</strong> 和 <strong>R</strong>，并熟练使用 <strong>Excel、SQL</strong> 进行数据查询与处理。此外，我擅长 <strong>Tableau、Power BI</strong> 进行数据可视化，能够高效制作仪表盘和报告，为商业决策提供支持。</p>
 
     <h2>未来方向</h2>
-    <p>希望未来能够加入 <strong>数据科学团队</strong>，结合我的 <strong>统计分析、商业分析和可视化能力</strong>，助力高维数据的深入分析，挖掘业务增长潜力，并推动数据驱动决策的高效落地。</p>
+    <p>我目前正在寻找暑期实习或短期研究项目的机会，如果您对我感兴趣，欢迎联系我！希望未来能够加入 <strong>数据科学团队</strong>，结合我的 <strong>统计分析、商业分析和可视化能力</strong>，助力高维数据的深入分析，挖掘业务增长潜力，并推动数据驱动决策的高效落地。</p>
 
     <!-- 联系方式 -->
     <h2>联系我</h2>
@@ -39,7 +39,7 @@
 
     <!-- 个人介绍（英文） -->
     <h2>About Me</h2>
-    <p>My name is Siyi Lyu (Harper). I am a Master of Mathematical Sciences graduate from the University of Oxford with a solid background in mathematics, statistics, and data science. I was awarded the **Optiver Foundation Scholarship** (one of only six recipients worldwide and the only one from Asia). In the fall of 2025, I will begin my Ph.D. studies in Statistics at a **Top 30 U.S. university**.</p>
+    <p>My name is Siyi Lyu (Harper). I am a Master of Mathematical Sciences graduate from the University of Oxford with a solid background in mathematics, statistics, and data science. I was awarded the **Optiver Foundation Scholarship** (one of only six recipients worldwide and the only one from Asia). In the fall of 2025, I will begin my Ph.D. studies in Statistics at a Top 30 U.S. university.</p>
 
     <p>In my free time, I enjoy <strong>dancing, gaming, sports, and reading</strong>.</p>
 
@@ -52,7 +52,7 @@
     <p>I am proficient in <strong>Python (NumPy, Pandas, Scikit-learn, PyTorch)</strong> and <strong>R</strong>, and skilled in using <strong>Excel and SQL</strong> for data querying and processing. Additionally, I excel at data visualization with <strong>Tableau and Power BI</strong>, enabling me to create effective dashboards and reports that support business decisions.</p>
 
     <h2>Future Aspirations</h2>
-    <p>I aspire to join a <strong>data science team</strong>, where I can leverage my skills in <strong>statistical analysis, business analytics, and data visualization</strong> to conduct high-dimensional data analysis, uncover business growth opportunities, and drive data-driven decision-making.</p>
+    <p>I am currently looking for summer internship or short-term research project opportunities. If you are interested in me, please contact me! I aspire to join a <strong>data science team</strong>, where I can leverage my skills in <strong>statistical analysis, business analytics, and data visualization</strong> to conduct high-dimensional data analysis, uncover business growth opportunities, and drive data-driven decision-making.</p>
 
     <!-- Contact Information -->
     <h2>Contact Me</h2>
