--- a/index.html
+++ b/index.html
@@ -7,8 +7,84 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welecome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
-    <p>这是我的个人网站，展示我的项目,成果和博客。</p>
+    <!-- 个人简介卡片 -->
+    <div class="profile-card">
+        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
+             alt="Siyi Lyu 个人照片" class="profile-img">
+        <h2>Siyi Lyu</h2>
+        <p>📌 牛津大学数学科学硕士 </p>
+        <p>🏆 Optiver 基金会奖学金获得者（全球 6 人，亚洲唯一）</p>
+        <p>📊 专长：数据分析 | 机器学习 | 高维统计</p>
+        <p>🎯 目标：加入数据科学团队，推动数据驱动决策</p>
+        <a href="mailto:siyilyu641@163.com" class="contact-button">📧 联系我</a>
+    </div>
+
+    <!-- 📌 Welcome 介绍 -->
+    <h1>Welcome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
+    <p>这是我的个人网站，展示我的项目, 成果和博客。</p>
+
+    <!-- 研究方向 -->
+<h3>🎓 研究方向</h3>
+<ul>
+    <li>📌 <strong>高维数据分析</strong> - 研究如何优化统计模型在大规模数据集上的表现。</li>
+    <li>📈 <strong>随机矩阵理论 & 计算统计</strong> - 结合随机矩阵理论开发新的随机数值线性代数算法。</li>
+    <li>🤖 <strong>深度学习 & 不确定性建模</strong> - 研究 Bayesian 深度学习方法在风险评估中的应用。</li>
+    <li>💰 <strong>金融统计 & 高频交易</strong> - 应用 Avellaneda-Stoikov 框架优化高频交易策略。</li>
+</ul>
+
+<!-- 代表性研究 -->
+<h3>📑 代表性研究</h3>
+<ul>
+    <li>📝 <strong>随机数值线性代数（RLA）</strong> - 开发新的随机列子集选择问题（CSSP）算法，研究随机矩阵理论在机器学习中的应用。</li>
+    <li>📊 <strong>高频市场做市商策略</strong> - 基于 Avellaneda-Stoikov 框架，使用 HJB 方程优化动态竞价策略。</li>
+    <li>🌍 <strong>生态环境统计建模</strong> - 研究鸟类分布概率模型，分析不同岛屿的生物多样性。</li>
+    <li>📉 <strong>金融投资风险量化</strong> - 使用 GARCH 模型量化金融市场风险，并优化商品期货交易策略。</li>
+</ul>
+
+<!-- 论文发表 -->
+<h3>📚 论文发表</h3>
+<ul>
+    <li>📖 <strong>Fractional Inequalities for Strongly r-Convex Functions on Time Scales</strong>（2024, 待发表）</li>
+    <li>📖 <strong>Research on Quantitative Evaluation of Financial Investment Risk Based on the GARCH Model</strong>（2024, Submitted to <i>Mathematics</i>）</li>
+    <li>📖 <strong>Global Temperature Prediction Based on SARIMA+LSTM Model</strong> - CAMMIC 2023 会议论文</li>
+    <li>📖 <strong>Analysis of Green GDP and Global Temperature Forecast Based on Time Series Model</strong> - PMIS 2023 会议论文</li>
+</ul>
+
+<!-- 研究项目 -->
+<h3>🔬 研究项目</h3>
+<ul>
+    <li>📌 <strong>牛津大学 - 随机矩阵理论与随机线性代数</strong>（2024 - 进行中）</li>
+    <li>📌 <strong>哥伦比亚大学 - 高频市场做市商策略研究</strong>（2024 - 进行中）</li>
+    <li>📌 <strong>雷丁大学 - 生态环境统计建模</strong>（2023 - 2024）</li>
+    <li>📌 <strong>NUIST - 金融投资风险量化</strong>（2023）</li>
+</ul>
+    
+    <!-- 🛠 技术栈 & 关键技能 -->
+    <h2>🛠 技术栈 & 关键技能</h2>
+    <ul>
+        <li>📌 <strong>编程语言：</strong> Python, R, SQL</li>
+        <li>📊 <strong>机器学习：</strong> Scikit-learn, TensorFlow, PyTorch</li>
+        <li>📈 <strong>数据可视化：</strong> Tableau, Power BI, Matplotlib</li>
+        <li>📝 <strong>数据库：</strong> MySQL, PostgreSQL, MongoDB</li>
+        <li>⚙ <strong>工具：</strong> Git, Docker, Linux, VS Code</li>
+    </ul>
+    
+    <!-- 社交媒体 -->
+    <h2>🔗 社交媒体 & 个人主页</h2>
+    <p>
+        🌐 <a href="www.linkedin.com/in/siyi-lyu-641-harper" target="_blank">LinkedIn</a> |
+        💻 <a href="https://github.com/HarperLyu641" target="_blank">GitHub</a>
+    </p>
+
+    <!-- 访客计数 -->
+    <h2>👀 访客统计</h2>
+    <p>你是第 <img src="https://visitor-badge.glitch.me/badge?page_id=HarperLyu641" alt="访客计数"> 位访问者</p>
+
+    <!-- 页脚 -->
+    <footer>
+        <p>&copy; 2024 Siyi Lyu | Designed with ❤️</p>
+    </footer>
+</body>
 
     <!-- 个人照片 -->
     <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
@@ -35,28 +111,54 @@
     <h2>联系我</h2>
     <p>📧 <strong>邮箱：</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
 
-    <hr> <!-- 分割线 -->
+   <hr> <!-- 分割线 -->
 
-    <!-- 个人介绍（英文） -->
-    <h2>About Me</h2>
-    <p>My name is Siyi Lyu (Harper). I am a Master of Mathematical Sciences graduate from the University of Oxford with a solid background in mathematics, statistics, and data science. I was awarded the **Optiver Foundation Scholarship** (one of only six recipients worldwide and the only one from Asia). In the fall of 2025, I will begin my Ph.D. studies in Statistics at a Top 30 U.S. university.</p>
+<!-- 🌟 About Me -->
+<h2>🌟 About Me</h2>
+<p>My name is <strong>Siyi Lyu (Harper)</strong>. I am a <strong>Master of Mathematical Sciences</strong> graduate from the <strong>University of Oxford</strong>, with a strong foundation in <strong>mathematics, statistics, and data science</strong>. I was honored to receive the <strong>Optiver Foundation Scholarship</strong>, awarded to only six recipients worldwide (and the sole recipient from Asia). In Fall 2025, I will begin my <strong>Ph.D. studies in Statistics</strong> at a Top 30 U.S. university.</p>
 
-    <p>In my free time, I enjoy <strong>dancing, gaming, sports, and reading</strong>.</p>
+<p>Beyond academics, I have a deep passion for <strong>dancing, gaming, sports, and reading</strong>.</p>
 
-    <h2>Academic Interests</h2>
-    <p>My academic interests include <strong>high-dimensional data analysis, computational statistics, and machine learning</strong>, as well as their applications. My studies have covered topics such as <strong>stochastic differential equations, Bayesian methods, advanced statistical machine learning, random matrix theory, graphical models, and uncertainty in deep learning</strong>. I have also gained substantial experience in data analysis and modeling.</p>
+<!-- 📖 Academic Interests -->
+<h2>📖 Academic Interests</h2>
+<p>My research interests lie in <strong>high-dimensional data analysis, computational statistics, and machine learning</strong>, with a focus on their real-world applications. Throughout my academic journey, I have explored various topics, including:</p>
+<ul>
+    <li>🔹 Stochastic Differential Equations</li>
+    <li>🔹 Bayesian Methods</li>
+    <li>🔹 Advanced Statistical Machine Learning</li>
+    <li>🔹 Random Matrix Theory</li>
+    <li>🔹 Graphical Models</li>
+    <li>🔹 Uncertainty in Deep Learning</li>
+</ul>
+<p>My research has provided me with a solid foundation in statistical modeling and data analysis, enabling me to tackle complex real-world problems.</p>
 
-    <h2>Data Analysis Experience</h2>
-    <p>I have worked as a data analysis intern at <strong>Alibaba, Guotou Securities, and Kaiyuan Securities</strong>, where I gained expertise in <strong>data cleaning, feature engineering, A/B test design, and causal inference</strong>. I have a strong ability to extract critical business insights from massive datasets.</p>
+<!-- 📊 Data Analysis Experience -->
+<h2>📊 Data Analysis Experience</h2>
+<p>I have gained extensive hands-on experience in data analysis through my internships at <strong>Alibaba, Guotou Securities, and Kaiyuan Securities</strong>. During these roles, I developed expertise in:</p>
+<ul>
+    <li>🔹 <strong>Data Cleaning & Feature Engineering</strong> – Ensuring high-quality datasets for analysis</li>
+    <li>🔹 <strong>A/B Testing & Experimental Design</strong> – Designing and implementing controlled experiments</li>
+    <li>🔹 <strong>Causal Inference</strong> – Understanding cause-and-effect relationships within data</li>
+</ul>
+<p>My analytical skills allow me to extract meaningful insights from massive datasets, facilitating data-driven decision-making.</p>
 
-    <p>I am proficient in <strong>Python (NumPy, Pandas, Scikit-learn, PyTorch)</strong> and <strong>R</strong>, and skilled in using <strong>Excel and SQL</strong> for data querying and processing. Additionally, I excel at data visualization with <strong>Tableau and Power BI</strong>, enabling me to create effective dashboards and reports that support business decisions.</p>
+<!-- 🛠 Technical Skills -->
+<h2>🛠 Technical Skills</h2>
+<ul>
+    <li>🔹 <strong>Programming:</strong> Python (NumPy, Pandas, Scikit-learn, PyTorch), R</li>
+    <li>🔹 <strong>Data Querying:</strong> SQL, Excel</li>
+    <li>🔹 <strong>Machine Learning:</strong> Supervised & Unsupervised Learning, Deep Learning</li>
+    <li>🔹 <strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn</li>
+</ul>
 
-    <h2>Future Aspirations</h2>
-    <p>I am currently looking for summer internship or short-term research project opportunities. If you are interested in me, please contact me! I aspire to join a <strong>data science team</strong>, where I can leverage my skills in <strong>statistical analysis, business analytics, and data visualization</strong> to conduct high-dimensional data analysis, uncover business growth opportunities, and drive data-driven decision-making.</p>
+<!-- 🚀 Future Aspirations -->
+<h2>🚀 Future Aspirations</h2>
+<p>I am actively seeking <strong>summer internship or short-term research project opportunities</strong>. If you are interested in collaborating with me, please feel free to reach out!</p>
+<p>My ultimate goal is to join a <strong>data science team</strong> where I can leverage my expertise in <strong>statistical analysis, business analytics, and data visualization</strong> to conduct high-dimensional data analysis, uncover business growth opportunities, and drive data-driven decision-making.</p>
 
-    <!-- Contact Information -->
-    <h2>Contact Me</h2>
-    <p>📧 <strong>Email:</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
+<!-- 📩 Contact Information -->
+<h2>📩 Contact Me</h2>
+<p>📧 <strong>Email:</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
 
 </body>
 </html>
