--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
     <!-- 个人简介卡片 -->
     <div class="profile-card">
-        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
-             alt="Siyi Lyu 个人照片" class="profile-img">
         <h2>Siyi Lyu</h2>
         <p>📌 牛津大学数学科学硕士 </p>
         <p>🏆 Optiver 基金会奖学金获得者（全球 6 人，亚洲唯一）</p>
@@ -22,7 +20,15 @@
     <!-- 📌 Welcome 介绍 -->
     <h1>Welcome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
     <p>这是我的个人网站，展示我的项目, 成果和博客。</p>
-
+    
+ <h2>📸 My Life & Interests</h2>
+<div class="image-gallery">
+    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo1.jpg?raw=true" alt="Photo 1">
+    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo2.jpg?raw=true" alt="Photo 2">
+    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo3.jpg?raw=true" alt="Photo 3">
+    <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo4.jpg?raw=true" alt="Photo 4">
+</div>
+    
     <!-- 研究方向 -->
 <h3>🎓 研究方向</h3>
 <ul>
