--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1>Welcome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
     <p>这是我的个人网站，展示我的项目, 成果和博客。</p>
     
- <h2>📸 My Life & Interests</h2>
-<div class="image-gallery">
+<h2>📸 My Life & Interests</h2>
+<div class="masonry-gallery">
     <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo1.jpg?raw=true" alt="Photo 1">
     <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo2.jpg?raw=true" alt="Photo 2">
     <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo3.jpg?raw=true" alt="Photo 3">
