--- a/index.html
+++ b/index.html
@@ -1,34 +1,66 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siyi Lyu的 GitHub Pages 个人网站</title>
+    <title>Siyi Lyu | GitHub Pages Personal Website</title>
     <link rel="stylesheet" href="style.css"> <!-- 引入 CSS -->
 </head>
 <body>
 
-    <!-- 👤 个人简介卡片 -->
+    <!-- 👤 Profile Card -->
     <div class="profile-card">
         <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
-             alt="Siyi Lyu 个人照片" class="profile-img">
+             alt="Siyi Lyu Profile Photo" class="profile-img">
         <h2>Siyi Lyu</h2>
-        <p>📌 牛津大学数学科学硕士</p>
-        <p>🏆 Optiver 基金会奖学金获得者（全球 6 人，亚洲唯一）</p>
-        <p>📊 专长：数据分析 | 机器学习 | 高维统计</p>
-        <p>🎯 目标：加入数据科学团队，推动数据驱动决策</p>
-        <a href="mailto:siyilyu641@163.com" class="contact-button">📧 联系我</a>
+        <p>📌 MSc in Mathematical Sciences, University of Oxford</p>
+        <p>🏆 Optiver Foundation Scholarship Recipient (Global Top 6, Only Asian Awardee)</p>
+        <p>📊 Specialties: Data Analysis | Machine Learning | High-Dimensional Statistics</p>
+        <p>🎯 Aspiring to join a data science team to drive data-driven decision-making</p>
+        <a href="mailto:siyilyu641@163.com" class="contact-button">📧 Contact Me</a>
     </div>
 
-    <!-- 📌 Welcome 介绍 -->
-    <h1>Welcome! 欢迎来到 Siyi Lyu 的个人网站！</h1>
-    <p>这是我的个人网站，展示我的项目, 成果和博客。</p>
- <!-- 个人介绍（中文）-->
-    
-    <h2>关于我</h2>
-    <p>我叫吕思宜，目前在牛津大学攻读数学科学硕士，之前在雷丁大学和南京信息工程大学就读数学与应用数学双学士学位。我具有扎实的数学、统计学和数据科学背景，目前已获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）以及博士全额奖学金。即将于 2025 年秋季前往美国 TOP 30 院校读统计学博士学位。</p>
-   
-    <!-- 📸 个人生活 & 兴趣 -->
+    <!-- 📌 Welcome Section -->
+    <h1>Welcome! 🚀</h1>
+    <p>This is my personal website where I showcase my research, projects, and blogs.</p>
+
+    <!-- 🌟 About Me -->
+    <h2>🌟 About Me</h2>
+    <p>I am <strong>Siyi Lyu (Harper)</strong>, a <strong>Master of Mathematical Sciences</strong> graduate from the <strong>University of Oxford</strong>, with a strong foundation in <strong>mathematics, statistics, and data science</strong>. I was honored to receive the <strong>Optiver Foundation Scholarship</strong>, awarded to only six recipients worldwide (and the sole recipient from Asia). In Fall 2025, I will begin my <strong>Ph.D. studies in Statistics</strong> at a Top 30 U.S. university.</p>
+
+    <p>Beyond academics, I have a deep passion for <strong>dancing, gaming, sports, and reading</strong>.</p>
+
+    <!-- 📖 Research Interests -->
+    <h2>📖 Research Interests</h2>
+    <p>My research interests lie in <strong>high-dimensional data analysis, computational statistics, and machine learning</strong>, with a focus on their real-world applications. I have explored topics such as:</p>
+    <ul>
+        <li>🔹 Stochastic Differential Equations</li>
+        <li>🔹 Bayesian Methods</li>
+        <li>🔹 Advanced Statistical Machine Learning</li>
+        <li>🔹 Random Matrix Theory</li>
+        <li>🔹 Graphical Models</li>
+        <li>🔹 Uncertainty in Deep Learning</li>
+    </ul>
+
+    <!-- 📊 Data Analysis Experience -->
+    <h2>📊 Data Analysis Experience</h2>
+    <p>I have gained extensive hands-on experience in data analysis through my internships at <strong>Alibaba, Guotou Securities, and Kaiyuan Securities</strong>. My expertise includes:</p>
+    <ul>
+        <li>🔹 <strong>Data Cleaning & Feature Engineering</strong> – Ensuring high-quality datasets for analysis</li>
+        <li>🔹 <strong>A/B Testing & Experimental Design</strong> – Designing and implementing controlled experiments</li>
+        <li>🔹 <strong>Causal Inference</strong> – Understanding cause-and-effect relationships within data</li>
+    </ul>
+
+    <!-- 🛠 Technical Skills -->
+    <h2>🛠 Technical Skills</h2>
+    <ul>
+        <li>🔹 <strong>Programming:</strong> Python (NumPy, Pandas, Scikit-learn, PyTorch), R</li>
+        <li>🔹 <strong>Data Querying:</strong> SQL, Excel</li>
+        <li>🔹 <strong>Machine Learning:</strong> Supervised & Unsupervised Learning, Deep Learning</li>
+        <li>🔹 <strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn</li>
+    </ul>
+
+    <!-- 📸 My Life & Interests -->
     <h2>📸 My Life & Interests</h2>
     <div class="masonry-gallery">
         <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo1.jpg?raw=true" alt="Photo 1">
@@ -37,110 +69,33 @@
         <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo4.jpg?raw=true" alt="Photo 4">
     </div>
 
-    <!-- 🎓 研究方向 -->
-    <h2>🎓 研究方向</h2>
-    <ul>
-        <li>📌 <strong>高维数据分析</strong> - 研究如何优化统计模型在大规模数据集上的表现。</li>
-        <li>📈 <strong>随机矩阵理论 & 计算统计</strong> - 结合随机矩阵理论开发新的随机数值线性代数算法。</li>
-        <li>🤖 <strong>深度学习 & 不确定性建模</strong> - 研究 Bayesian 深度学习方法在风险评估中的应用。</li>
-        <li>💰 <strong>金融统计 & 高频交易</strong> - 应用 Avellaneda-Stoikov 框架优化高频交易策略。</li>
-    </ul>
-
-    <!-- 🛠 技术栈 & 关键技能 -->
-    <h2>🛠 技术栈 & 关键技能</h2>
-    <ul>
-        <li>📌 <strong>编程语言：</strong> Python, R, SQL</li>
-        <li>📊 <strong>机器学习：</strong> Scikit-learn, TensorFlow, PyTorch</li>
-        <li>📈 <strong>数据可视化：</strong> Tableau, Power BI, Matplotlib</li>
-        <li>📝 <strong>数据库：</strong> MySQL, PostgreSQL, MongoDB</li>
-        <li>⚙ <strong>工具：</strong> Git, Docker, Linux, VS Code</li>
-    </ul>
-
-    <!-- 🔗 社交媒体 -->
-    <h2>🔗 社交媒体 & 个人主页</h2>
+    <!-- 🔗 Social Media -->
+    <h2>🔗 Social Media & Profiles</h2>
     <p>
         🌐 <a href="https://www.linkedin.com/in/siyi-lyu-641-harper/" target="_blank">LinkedIn</a> |
         💻 <a href="https://github.com/HarperLyu641" target="_blank">GitHub</a>
     </p>
 
-    <!-- 👀 访客统计 -->
-    <h2>👀 访客统计</h2>
-    <p>你是第 <img src="https://visitor-badge.glitch.me/badge?page_id=HarperLyu641" alt="访客计数"> 位访问者</p>
+    <!-- 👀 Visitor Count -->
+    <h2>👀 Visitor Count</h2>
+    <p>You are visitor number <img src="https://visitor-badge.glitch.me/badge?page_id=HarperLyu641" alt="Visitor Count"></p>
 
-    <!-- 📩 联系方式 -->
-    <h2>📩 Contact Me</h2>
+    <!-- 📩 Contact -->
+    <h2>📩 Contact</h2>
     <p>📧 <strong>Email:</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
 
-    <p>平时生活中，我的爱好是 <strong>跳舞、游戏、运动、看书</strong>。</p>
+    <hr> <!-- 分割线 -->
 
-    <h2>学术兴趣</h2>
-    <p>我的学术兴趣是 <strong>高维数据分析、计算统计和机器学习</strong>，以及它们的应用。在学术研究中，我深入学习了 <strong>随机微分方程、贝叶斯方法、统计机器学习高级主题、随机矩阵理论、图模型和深度学习中的不确定性</strong> 等课程，并在数据分析与建模方向积累了丰富经验。</p>
+    <!-- 📌 中文部分（简要介绍） -->
+    <h2>📌 关于我（中文）</h2>
+    <p>我叫吕思宜，目前在牛津大学攻读数学科学硕士，之前在雷丁大学和南京信息工程大学就读数学与应用数学双学士学位。我具有扎实的数学、统计学和数据科学背景，目前已获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）以及博士全额奖学金。即将于 2025 年秋季前往美国 TOP 30 院校读统计学博士学位。</p>
 
-    <h2>数据分析经验</h2>
-    <p>我曾在 <strong>阿里巴巴、国投证券、开源证券</strong> 等公司担任数据分析实习生，熟练掌握 <strong>数据清洗、特征工程、A/B 测试设计及因果推断</strong> 等关键技术，具备从海量数据中提取关键业务洞察的能力。</p>
-
-    <p>我精通 <strong>Python（NumPy、Pandas、Scikit-learn、PyTorch）</strong> 和 <strong>R</strong>，并熟练使用 <strong>Excel、SQL</strong> 进行数据查询与处理。此外，我擅长 <strong>Tableau、Power BI</strong> 进行数据可视化，能够高效制作仪表盘和报告，为商业决策提供支持。</p>
-
-    <h2>未来方向</h2>
     <p>我目前正在寻找暑期实习或短期研究项目的机会，如果您对我感兴趣，欢迎联系我！希望未来能够加入 <strong>数据科学团队</strong>，结合我的 <strong>统计分析、商业分析和可视化能力</strong>，助力高维数据的深入分析，挖掘业务增长潜力，并推动数据驱动决策的高效落地。</p>
 
-    <!-- 联系方式 -->
-    <h2>联系我</h2>
-    <p>📧 <strong>邮箱：</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
-
-   <hr> <!-- 分割线 -->
-
-<!-- 🌟 About Me -->
-<h2>🌟 About Me</h2>
-<p>My name is <strong>Siyi Lyu (Harper)</strong>. I am a <strong>Master of Mathematical Sciences</strong> graduate from the <strong>University of Oxford</strong>, with a strong foundation in <strong>mathematics, statistics, and data science</strong>. I was honored to receive the <strong>Optiver Foundation Scholarship</strong>, awarded to only six recipients worldwide (and the sole recipient from Asia). In Fall 2025, I will begin my <strong>Ph.D. studies in Statistics</strong> at a Top 30 U.S. university.</p>
-
-<p>Beyond academics, I have a deep passion for <strong>dancing, gaming, sports, and reading</strong>.</p>
-
-<!-- 📖 Academic Interests -->
-<h2>📖 Academic Interests</h2>
-<p>My research interests lie in <strong>high-dimensional data analysis, computational statistics, and machine learning</strong>, with a focus on their real-world applications. Throughout my academic journey, I have explored various topics, including:</p>
-<ul>
-    <li>🔹 Stochastic Differential Equations</li>
-    <li>🔹 Bayesian Methods</li>
-    <li>🔹 Advanced Statistical Machine Learning</li>
-    <li>🔹 Random Matrix Theory</li>
-    <li>🔹 Graphical Models</li>
-    <li>🔹 Uncertainty in Deep Learning</li>
-</ul>
-<p>My research has provided me with a solid foundation in statistical modeling and data analysis, enabling me to tackle complex real-world problems.</p>
-
-<!-- 📊 Data Analysis Experience -->
-<h2>📊 Data Analysis Experience</h2>
-<p>I have gained extensive hands-on experience in data analysis through my internships at <strong>Alibaba, Guotou Securities, and Kaiyuan Securities</strong>. During these roles, I developed expertise in:</p>
-<ul>
-    <li>🔹 <strong>Data Cleaning & Feature Engineering</strong> – Ensuring high-quality datasets for analysis</li>
-    <li>🔹 <strong>A/B Testing & Experimental Design</strong> – Designing and implementing controlled experiments</li>
-    <li>🔹 <strong>Causal Inference</strong> – Understanding cause-and-effect relationships within data</li>
-</ul>
-<p>My analytical skills allow me to extract meaningful insights from massive datasets, facilitating data-driven decision-making.</p>
-
-<!-- 🛠 Technical Skills -->
-<h2>🛠 Technical Skills</h2>
-<ul>
-    <li>🔹 <strong>Programming:</strong> Python (NumPy, Pandas, Scikit-learn, PyTorch), R</li>
-    <li>🔹 <strong>Data Querying:</strong> SQL, Excel</li>
-    <li>🔹 <strong>Machine Learning:</strong> Supervised & Unsupervised Learning, Deep Learning</li>
-    <li>🔹 <strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn</li>
-</ul>
-
-<!-- 🚀 Future Aspirations -->
-<h2>🚀 Future Aspirations</h2>
-<p>I am actively seeking <strong>summer internship or short-term research project opportunities</strong>. If you are interested in collaborating with me, please feel free to reach out!</p>
-<p>My ultimate goal is to join a <strong>data science team</strong> where I can leverage my expertise in <strong>statistical analysis, business analytics, and data visualization</strong> to conduct high-dimensional data analysis, uncover business growth opportunities, and drive data-driven decision-making.</p>
-
-<!-- 📩 Contact Information -->
-<h2>📩 Contact Me</h2>
-<p>📧 <strong>Email:</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
-
-    <!-- 🔻 页脚 -->
+    <!-- 🔻 Footer -->
     <footer>
         <p>&copy; 2024 Siyi Lyu | Designed with ❤️</p>
     </footer>
-    
+
 </body>
 </html>
