--- a/index.html
+++ b/index.html
@@ -69,6 +69,28 @@
         <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo4.jpg?raw=true" alt="Photo 4">
     </div>
 
+    <!-- 🌍 Language Proficiency -->
+    <h2>🌍 Language Proficiency</h2>
+    <ul>
+        <li>🔹 **Mandarin** (Native)</li>
+        <li>🔹 **English** (Fluent; IELTS 7.0; GRE: Verbal 166, Quant 170, Writing 5.5)</li>
+        <li>🔹 **Japanese** (Fluent, JLPT N2)</li>
+    </ul>
+
+    <!-- 🏆 Professional Memberships -->
+    <h2>🏆 Professional Organizations Membership</h2>
+    <p>🎓 <strong>Institute of Mathematical Statistics (IMS)</strong> - Student Member</p>
+
+    <!-- 📥 Download My CV -->
+<h2>📥 Download My CV</h2>
+<p>Click below to download my latest CV:</p>
+
+<!-- 英文版简历 -->
+<a href="https://github.com/HarperLyu641/harperlyu641.github.io/raw/main/Siyi_Lyu_CV.pdf" target="_blank" class="contact-button">📄 Download CV (English)</a>
+
+<!-- 中文版简历 -->
+<a href="https://github.com/HarperLyu641/harperlyu641.github.io/raw/main/吕思宜中文简历完整版本.pdf" target="_blank" class="contact-button">📄 下载简历 (中文)</a>
+
     <!-- 🔗 Social Media -->
     <h2>🔗 Social Media & Profiles</h2>
     <p>
