--- a/index.html
+++ b/index.html
@@ -106,18 +106,32 @@
     <h2>📩 Contact</h2>
     <p>📧 <strong>Email:</strong> siyilyu641@163.com | siyi.lyu@lmh.ox.ac.uk</p>
 
-    <hr> <!-- 分割线 -->
+   <hr> <!-- 分割线 -->
 
-    <!-- 📌 中文部分（简要介绍） -->
-    <h2>📌 关于我（中文）</h2>
-    <p>我叫吕思宜，目前在牛津大学攻读数学科学硕士，之前在雷丁大学和南京信息工程大学就读数学与应用数学双学士学位。我具有扎实的数学、统计学和数据科学背景，目前已获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）以及博士全额奖学金。即将于 2025 年秋季前往美国 TOP 30 院校读统计学博士学位。</p>
+<!-- 📌 中文部分（详细介绍） -->
+<h2>📌 关于我（中文）</h2>
+<p>我叫吕思宜，目前在牛津大学攻读数学科学硕士，之前在雷丁大学和南京信息工程大学就读数学与应用数学双学士学位。我具有扎实的数学、统计学和数据科学背景，目前已获得 Optiver 基金会奖学金（全球仅 6 人，亚洲唯一获奖者）以及博士全额奖学金。即将于 2025 年秋季前往美国 TOP 30 院校攻读统计学博士学位。</p>
 
-    <p>我目前正在寻找暑期实习或短期研究项目的机会，如果您对我感兴趣，欢迎联系我！希望未来能够加入 <strong>数据科学团队</strong>，结合我的 <strong>统计分析、商业分析和可视化能力</strong>，助力高维数据的深入分析，挖掘业务增长潜力，并推动数据驱动决策的高效落地。</p>
+<h3>🎓 学术兴趣</h3>
+<p>我的研究方向主要包括 <strong>高维数据分析、计算统计、机器学习</strong> 及其应用。我对 <strong>随机矩阵理论、贝叶斯统计、图模型</strong> 等方向有深入的学习和研究，并致力于探索统计方法在金融、医疗、生物信息等领域的应用。</p>
 
-    <!-- 🔻 Footer -->
-    <footer>
-        <p>&copy; 2024 Siyi Lyu | Designed with ❤️</p>
-    </footer>
+<h3>📊 技术能力</h3>
+<ul>
+    <li>📌 <strong>编程语言：</strong> Python, R, SQL</li>
+    <li>📊 <strong>机器学习框架：</strong> Scikit-learn, TensorFlow, PyTorch</li>
+    <li>📈 <strong>数据可视化：</strong> Tableau, Power BI, Matplotlib</li>
+    <li>📝 <strong>数据库管理：</strong> MySQL, PostgreSQL, MongoDB</li>
+    <li>⚙ <strong>开发工具：</strong> Git, Docker, Linux, VS Code</li>
+</ul>
+
+<h3>🚀 未来发展方向</h3>
+<p>我目前正在寻找 <strong>暑期实习或短期研究项目</strong> 的机会。如果您对我感兴趣，欢迎联系我！</p>
+<p>希望未来能够加入 <strong>数据科学团队</strong>，结合我的 <strong>统计分析、商业分析和可视化能力</strong>，助力高维数据的深入分析，挖掘业务增长潜力，并推动数据驱动决策的高效落地。</p>
+
+<!-- 🔻 Footer -->
+<footer>
+    <p>&copy; 2024 Siyi Lyu | Designed with ❤️</p>
+</footer>
 
 </body>
 </html>
