--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <!-- 🌍 Language Proficiency -->
     <h2>🌍 Language Proficiency</h2>
     <ul>
-        <li>🔹 **Mandarin** (Native)</li>
-        <li>🔹 **English** (Fluent; IELTS 7.0; GRE: Verbal 166, Quant 170, Writing 5.5)</li>
-        <li>🔹 **Japanese** (Fluent, JLPT N2)</li>
+        <li>🔹 Mandarin (Native)</li>
+        <li>🔹 English (Fluent; IELTS 7.0; GRE: Verbal 166, Quant 170, Writing 5.5)</li>
+        <li>🔹 Japanese (Fluent, JLPT N2)</li>
     </ul>
 
     <!-- 🏆 Professional Memberships -->
