--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <!-- 📸 My Life & Interests -->
     <h2>📸 My Life & Interests</h2>
     <div class="masonry-gallery">
-        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo1.jpg?raw=true" alt="Photo 1">
-        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo2.jpg?raw=true" alt="Photo 2">
-        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo3.jpg?raw=true" alt="Photo 3">
-        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/photo4.jpg?raw=true" alt="Photo 4">
+        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" alt="Photo 1">
+        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/2.jpg?raw=true" alt="Photo 2">
+        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/3.jpg?raw=true" alt="Photo 3">
+        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/4.jpg?raw=true" alt="Photo 4">
     </div>
 
     <!-- 🌍 Language Proficiency -->
