--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- 👤 Profile Card -->
     <div class="profile-card">
-        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/1.jpg?raw=true" 
+        <img src="https://github.com/HarperLyu641/harperlyu641.github.io/blob/main/%E7%99%BD%E5%BA%95%E8%AF%81%E4%BB%B6%E7%85%A7.jpg?raw=true" 
              alt="Siyi Lyu Profile Photo" class="profile-img">
         <h2>Siyi Lyu</h2>
         <p>📌 MSc in Mathematical Sciences, University of Oxford</p>
