--- a/index.html
+++ b/index.html
@@ -98,9 +98,12 @@
         💻 <a href="https://github.com/HarperLyu641" target="_blank">GitHub</a>
     </p>
 
-    <!-- 👀 Visitor Count -->
-    <h2>👀 Visitor Count</h2>
-    <p>You are visitor number <img src="https://visitor-badge.glitch.me/badge?page_id=HarperLyu641" alt="Visitor Count"></p>
+   <!-- 👀 Visitor Count -->
+<h2>👀 Visitor Count</h2>
+<p>You are visitor number:  
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/HarperLyu641&count_bg=%2379C83D&title_bg=%23555555&icon=github.svg&icon_color=%23E7E7E7&title=visits&edge_flat=false" 
+         alt="Visitor Count">
+</p>
 
     <!-- 📩 Contact -->
     <h2>📩 Contact</h2>
